--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   
 
   
-  <link rel="stylesheet" href="https://nikolaus-eckhard.onrender.com/css/base.min.03db2be5cd13a1ca629aca9edc6b903376e1b210e652deb405498b8d50be81c3.css" integrity="sha256-A9sr5c0Tocpimsqe3GuQM3bhshDmUt60BUmLjVC&#43;gcM=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://nikolaus-eckhard.onrender.com/css/base.min.1e6305602fa95053522f13d61d5918340d2f087124d59398099244c777706a4f.css" integrity="sha256-HmMFYC&#43;pUFNSLxPWHVkYNA0vCHEk1ZOYCZJEx3dwak8=" crossorigin="anonymous">
   
   
   
@@ -38,7 +38,7 @@
       </li>
       
       <li class="Banner-item">
-        <a class="Banner-link u-clickable" href="https://nikolaus-eckhard.onrender.com/index/">index</a>
+        <a class="Banner-link u-clickable" href="https://nikolaus-eckhard.onrender.com/projects/">index</a>
       </li>
       
       <li class="Banner-item">
